Fix T61272: Undo fails to track multi-edit mode enter/exit

Objects leaving edit-mode weren't restored by edit-mode undo steps.